--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "classnames": "^2.2.6",
+    "mobx": "^5.1.1",
+    "mobx-react": "^5.2.8",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.3.8",
