--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "classnames": "^2.2.6",
+    "mobx": "^5.1.1",
+    "mobx-react": "^5.2.8",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.3.8",
